--- a/src/components/BusinessCard/BusinessCard.scss
+++ b/src/components/BusinessCard/BusinessCard.scss
@@ -66,7 +66,7 @@
           align-items: center;
       }
       div {
-          text-align: justify;
+          text-align: left;
       }
   }
 }
